Fix partial updates of non-opaque QGraphicsItems

Replace the updated content in the cache, do not blend the updated area
with the old content.

Bug: QTBUG-7863